src/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');

body {
	margin: 0;
	font-family: 'Lato', sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	margin-top: 15vh;
	color: #050505;
	min-height: 100%;
	position: relative;
}

.caption-date {
	padding: 1vh 0 10vh 0;
	margin: 0 0 0 3vw;
	font-size: 1.9vh;
	color: #6A6E7C;
}

.caption-username {
	font-weight: bold;
	margin-right: 1vw;
}

.caption-wrapper {
	display: flex;
	flex-direction: row;
	margin: 3vh 3vw 1vh 3vw;
	text-align: left;
}

.circular-landscape {
    border-radius: 50%;
    width: 2.2rem;
    height: 2.2rem;
    margin-left: 3vw;
}

.circular-landscape img {
    object-fit: cover;
}

code {
	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
	  monospace;
}

.date-wrapper {
	margin-bottom: 2vh;
}

.default-image {
    width: 35vh;
}

.error-message {
	color: #BA3F1D;
	font-weight: bold;
}

.feed-container {
    background-color: #E9EAEC;
    width: 100vw;
    height: 60vh;
}

.feed-container img {
    object-fit: cover;
    height: 60vh;
    width: 100vw;
}

.feed-header {
    height: 8vh;
    display: flex;
    align-items: center;
	background: white;
	text-decoration: none;
	color: #050505;
}

.feed-username {
    font-family: 'Poppins', sans-serif;
    font-weight: bold;
    margin-left: 2vw;
}

.feed-post-information-wrapper {
	background: white;
	margin-bottom: 0;
	padding-bottom: 1vh;
	text-align: left;
}

.feed-wrapper {
	background: white;	
}

.feed-wrapper img {
	margin-bottom: 0;
	padding: 0;
	top: 0;
}

:focus {
	outline: 0px
}

:focus-visible {
	outline: 5px solid #2683be;
}

form {
	display: flex;
	flex-direction: column;
	align-items:center;
}

.form-label, .account-label {
	font-size: 2.2vh;
	margin-left: 3vw;
	font-weight: bold;
	color: #0252A2;
}

.form-wrapper {
	text-align:left;
}

h1 {
	font-family: 'Poppins', sans-serif;
}

h2 {
	font-size: 8vh;
	font-weight: bold;
	margin-top: 20vh;
	background: linear-gradient(to right, #DB0F6B 40%, #602182, #3724F9 60%);
	background-clip: text;
	color: transparent;
}

img {
	width: 100vw;
}

input, textarea, select {
    padding: 1vh 0 1vh 0;
    display: flex;
	flex-direction: column;
	background-color: #F2F2F2;
    width: 100vw;
	border-top-style: hidden;
    border-right-style: hidden;
    border-left-style: hidden;
    border-bottom-style: hidden;
	font-size: 2.2vh;
	text-indent: 3vw;
	margin: 1vh 0 1vh 0;
	color: #050505;
}

input:focus, textarea:focus, select:focus {
	outline: none;
	background-color: #E9EAEC;
}

.link-text {
    font-weight: bold;
    color: #0252A2;
    text-decoration: none;
}

.public-button {
    width: 25vw;
    padding: 1vh 0 1vh 0;
    border-radius: 50px;
    background-color: #343234;
    font-size: 2.2vh;
    color: #ffffff;
    font-family: 'Poppins', sans-serif;
    font-weight: bold;
    margin: 6vh 0 3vh 0;
}


@media all and (min-width: 500px) {
    .default-image {
        width: 40vh;
    }
}

@media all and (min-width: 600px) {
    button {
        width: 15vw;
    }
}

